# linkedin-agent

./: .env.example  .gitignore  main.py  pyproject.toml
config/: settings.py
graph/: builder.py  nodes.py  state.py
llm/: provider.py
tools/: web_research.py
